tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_cpp_function_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\n#include <iostream>\n\nint main() {\n    std::cout << \"Hello, world!\" << std::endl;\n    return 0;\n}\n\nint add(int a, int b) {\n    return a + b;\n}\n\nvoid print_number(int num) {\n    std::cout << num << std::endl;\n}\n\ndouble calculate_area(double radius) {\n    return 3.14159 * radius * radius;\n}\n",
      "end_line": 19,
      "language": "cpp",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "int main() {\n    std::cout << \"Hello, world!\" << std::endl;\n    return 0;\n}",
      "end_line": 7,
      "language": "cpp",
      "name": "main",
      "original_indentation": 0,
      "start_line": 4
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "int add(int a, int b) {\n    return a + b;\n}",
      "end_line": 11,
      "language": "cpp",
      "name": "add",
      "original_indentation": 0,
      "start_line": 9
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "void print_number(int num) {\n    std::cout << num << std::endl;\n}",
      "end_line": 15,
      "language": "cpp",
      "name": "print_number",
      "original_indentation": 0,
      "start_line": 13
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "double calculate_area(double radius) {\n    return 3.14159 * radius * radius;\n}",
      "end_line": 19,
      "language": "cpp",
      "name": "calculate_area",
      "original_indentation": 0,
      "start_line": 17
    }
  ],
  "source_code": "\n#include <iostream>\n\nint main() {\n    std::cout << \"Hello, world!\" << std::endl;\n    return 0;\n}\n\nint add(int a, int b) {\n    return a + b;\n}\n\nvoid print_number(int num) {\n    std::cout << num << std::endl;\n}\n\ndouble calculate_area(double radius) {\n    return 3.14159 * radius * radius;\n}\n",
  "test_name": "test_cpp_function_extraction",
  "total_chunks": 5
}
