tests/integration/languages/snapshots/r#mod__integration__languages__extractor__test_cpp_namespace_extraction.snap
---
source: tests/integration/languages/extractor.rs
expression: "serde_json::to_string_pretty(&snapshot_data).unwrap()"
---
{
  "chunks": [
    {
      "chunk_type": "File",
      "comment_ranges": [],
      "content": "\nnamespace math {\n    const double PI = 3.14159;\n\n    double square(double x) {\n        return x * x;\n    }\n\n    namespace geometry {\n        double circle_area(double radius) {\n            return PI * square(radius);\n        }\n    }\n}\n\nnamespace utils {\n    void print_message(const std::string& msg) {\n        std::cout << msg << std::endl;\n    }\n}\n\nint main() {\n    double area = math::geometry::circle_area(5.0);\n    utils::print_message(\"Hello from namespace!\");\n    return 0;\n}\n",
      "end_line": 26,
      "language": "cpp",
      "name": "entire_file",
      "original_indentation": 0,
      "start_line": 1
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    const double PI = 3.14159;",
      "end_line": 3,
      "language": "cpp",
      "name": "PI",
      "original_indentation": 4,
      "start_line": 3
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    double square(double x) {\n        return x * x;\n    }",
      "end_line": 7,
      "language": "cpp",
      "name": "square",
      "original_indentation": 4,
      "start_line": 5
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "        double circle_area(double radius) {\n            return PI * square(radius);\n        }",
      "end_line": 12,
      "language": "cpp",
      "name": "circle_area",
      "original_indentation": 8,
      "start_line": 10
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "    void print_message(const std::string& msg) {\n        std::cout << msg << std::endl;\n    }",
      "end_line": 19,
      "language": "cpp",
      "name": "print_message",
      "original_indentation": 4,
      "start_line": 17
    },
    {
      "chunk_type": "Function",
      "comment_ranges": [],
      "content": "int main() {\n    double area = math::geometry::circle_area(5.0);\n    utils::print_message(\"Hello from namespace!\");\n    return 0;\n}",
      "end_line": 26,
      "language": "cpp",
      "name": "main",
      "original_indentation": 0,
      "start_line": 22
    },
    {
      "chunk_type": "Variable",
      "comment_ranges": [],
      "content": "    double area = math::geometry::circle_area(5.0);",
      "end_line": 23,
      "language": "cpp",
      "name": "area",
      "original_indentation": 4,
      "start_line": 23
    }
  ],
  "source_code": "\nnamespace math {\n    const double PI = 3.14159;\n\n    double square(double x) {\n        return x * x;\n    }\n\n    namespace geometry {\n        double circle_area(double radius) {\n            return PI * square(radius);\n        }\n    }\n}\n\nnamespace utils {\n    void print_message(const std::string& msg) {\n        std::cout << msg << std::endl;\n    }\n}\n\nint main() {\n    double area = math::geometry::circle_area(5.0);\n    utils::print_message(\"Hello from namespace!\");\n    return 0;\n}\n",
  "test_name": "test_cpp_namespace_extraction",
  "total_chunks": 7
}
